@@ -11,9 +11,9 @@ using libport::UINFINITY;
 
 // Not libport/config.h: we're really looking for the header of the package
 // using libport.
-# include "config.h"
-# ifndef HAVE_ROUND
+# include "libport/config.h"
+# ifndef LIBPORT_HAVE_ROUND
 using libport::round;
-# endif /* !HAVE_ROUND */
+# endif /* !LIBPORT_HAVE_ROUND */
 
 #endif // !LIBPORT_UFLOAT_H
